superlance Changelog
====================

0.5 (2009-05-24)

- Added ``memmon`` script, originally bundled with supervisor and
  now moved to superlance.

0.4 (2009-02-11)
----------------

- Added ``eager`` and ``not-eager`` options to httpok.  If ``not-eager``
  is set, and no process being monitored is in the RUNNING state, skip
  the URL check / mail message.

0.3 (2008-12-10)
----------------

- Added ``gcore`` and ``coredir`` options to httpok.

0.2 (2008-11-21)
----------------

- Added crashmail script.

0.1 (2008-09-18)
----------------

- Initial release